--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mime": "^2.5.2",
     "NeteaseCloudMusicApi": "^4.0.17",
     "node-emoji": "^1.10.0",
+    "node-schedule": "^2.0.0",
     "pinyin": "^2.10.2",
     "qrcode-terminal": "^0.12.0",
     "sqlite3": "^5.0.2",
