--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
+    "file-box": "^1.4.12",
     "iconv-lite": "^0.4.24",
     "istextorbinary": "^6.0.0",
     "mime": "^2.5.2",
@@ -34,8 +35,8 @@
     "pinyin": "^2.10.2",
     "qrcode-terminal": "^0.12.0",
     "sqlite3": "^5.0.2",
-    "wechaty": "^0.62.3",
-    "wechaty-puppet-wechat": "^0.28.1"
+    "wechaty": "^1.10.4",
+    "wechaty-puppet-wechat": "^1.10.5"
   },
   "devDependencies": {
     "@types/mime": "^2.0.3",
