--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "qrcode-terminal": "^0.12.0",
     "sqlite3": "^5.0.2",
     "wechaty": "^1.10.4",
-    "wechaty-puppet-wechat": "^1.10.5"
+    "wechaty-puppet-wechat": "^1.10.5",
+    "wechaty-puppet-xp": "^1.10.2"
   },
   "devDependencies": {
     "@types/mime": "^2.0.3",
