--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "watch": false,
     "rootDir": "./src",
     "outDir": "./build",
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "declaration": true
   },
   "include": [
     "src/**/*"
