--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
+    "dayjs": "^1.10.7",
     "file-box": "^1.4.12",
     "iconv-lite": "^0.4.24",
     "istextorbinary": "^6.0.0",
@@ -36,12 +37,14 @@
     "qrcode-terminal": "^0.12.0",
     "sqlite3": "^5.0.2",
     "wechaty": "^1.10.4",
-    "wechaty-puppet-xp": "^1.10.2"
+    "wechaty-puppet-xp": "^1.10.2",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@types/mime": "^2.0.3",
     "@types/pinyin": "^2.8.3",
-    "@types/sqlite3": "^3.1.7"
+    "@types/sqlite3": "^3.1.7",
+    "@types/xml2js": "^0.4.9"
   },
   "repository": {
     "type": "git",
