降级wechaty 0.68，使用 padlocal

--- a/package.json
+++ b/package.json
@@ -24,20 +24,22 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "NeteaseCloudMusicApi": "^4.0.17",
     "axios": "^0.21.1",
     "dayjs": "^1.10.7",
+    "dotenv": "^16.0.1",
     "file-box": "^1.4.12",
     "hpagent": "^0.1.2",
     "iconv-lite": "^0.4.24",
     "istextorbinary": "^6.0.0",
     "mime": "^2.5.2",
-    "NeteaseCloudMusicApi": "^4.0.17",
     "node-emoji": "^1.10.0",
     "node-schedule": "^2.0.0",
     "pinyin": "^2.10.2",
     "qrcode-terminal": "^0.12.0",
     "sqlite3": "^5.0.2",
-    "wechaty": "^1.10.4",
+    "wechaty": "^0.68.6",
+    "wechaty-puppet-padlocal": "^0.4.2",
     "wechaty-puppet-xp": "^1.10.20",
     "xml2js": "^0.4.23"
   },
