--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "pinyin": "^2.10.2",
     "qrcode-terminal": "^0.12.0",
     "sqlite3": "^5.0.2",
-    "wechaty": "^1.10.4",
-    "wechaty-puppet-xp": "^1.10.20",
+    "wechaty": "^1.20.2",
+    "wechaty-puppet": "^1.20.1",
+    "wechaty-puppet-xp": "^1.10.27",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
