--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-emoji": "^1.10.0",
     "node-schedule": "^2.0.0",
     "pinyin": "^2.10.2",
+    "qr-scanner": "^1.4.1",
     "qrcode-terminal": "^0.12.0",
     "sqlite3": "^5.0.2",
     "wechaty": "^1.20.2",
