--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "node-schedule": "^2.0.0",
     "pinyin": "^2.10.2",
     "qr-scanner": "^1.4.1",
+    "puppeteer": "^14.4.1",
     "qrcode-terminal": "^0.12.0",
     "sqlite3": "^5.0.2",
     "wechaty": "^1.20.2",
     "wechaty-puppet": "^1.20.1",
-    "wechaty-puppet-xp": "^1.11.14",
+    "wechaty-puppet-wechat": "^1.18.4",
     "xml2js": "^0.4.23",
     "xmldom": "^0.6.0"
   },
@@ -48,7 +49,8 @@
     "@types/mime": "^2.0.3",
     "@types/pinyin": "^2.8.3",
     "@types/sqlite3": "^3.1.7",
-    "@types/xml2js": "^0.4.9"
+    "@types/xml2js": "^0.4.9",
+    "typescript": "^4.8.4"
   },
   "repository": {
     "type": "git",
