--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-emoji": "^1.10.0",
     "node-schedule": "^2.0.0",
     "pinyin": "^2.10.2",
+    "puppeteer": "^19.0.0",
     "qr-scanner": "^1.4.1",
     "qrcode-terminal": "^0.12.0",
     "sqlite3": "^5.0.2",
@@ -48,7 +49,8 @@
     "@types/mime": "^2.0.3",
     "@types/pinyin": "^2.8.3",
     "@types/sqlite3": "^3.1.7",
-    "@types/xml2js": "^0.4.9"
+    "@types/xml2js": "^0.4.9",
+    "typescript": "^4.8.4"
   },
   "repository": {
     "type": "git",
